--- a/app/Resources/views/partenaire.html.twig
+++ b/app/Resources/views/partenaire.html.twig
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ asset('css/partenaire.css') }}">
 {% endblock %}
 {% block body %}
+	<input type="hidden" id="hid" value="{{ s }}">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 		<a class="navbar-brand" href="#">Mon site</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +49,16 @@
 						{{ form_row(partenaire.telephone, {'attr': {'placeholder': "votre Numero de téléphone...", 'type': "number", 'class': "form-control"}})
 						}}
 					</div>
+					<button type="submit" class="btn btn-outline-primary" id="btn_partenaire">Enrigestrer</button>
 					{{  form_end(partenaire) }}
+					<div class="alert alert-dismissible alert-success" id="confirmation_partenaire">
+						<p>
+							Bravo ! vous êtes presque 
+						</p>
+						<div class="progress">
+							<div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+					</div>
 				</div>
 				{##############################################}
 				
@@ -83,9 +93,14 @@
 						{{ form_row(formEtablissement.ville, {'attr': {'placeholder': "Votre ville", 'class': "form-control"}}
 						) }}
 					</div>
+					<button type="submit" class="btn btn-outline-primary" id="btn_etablissement">Enrigestrer</button>
 					{{ form_end( formEtablissement ) }}
 				</div>
 			</div>
 		</div>
 		
+	{% endblock %}
+	{% block javascripts %}
+		<script type="text/javascript" src="{{ asset('js/script.js') }}"></script>
+		<script type="text/javascript" src="{{ asset('js/partenaire.js') }}"></script>
 	{% endblock %}
