--- a/app/Resources/views/profil.html.twig
+++ b/app/Resources/views/profil.html.twig
@@ -1,47 +1,50 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-	<link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
+  <link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
 {% endblock %}
 {% block body %}
+  {% if is_granted("ROLE_ADMIN") %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Beaute</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Mes Reservation <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">hhh</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Connexion</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<div class="container">
-<div class="row">
-      <div class="col-sm-6">
-          {{ form_start(form) }}
-            {{ form_row(form.typeActivite, {'attr': {'placeholder': "Recherche par prestation",'class':'form-control'}}) }}
-            {{ form_row(form.ville, {'attr': {'placeholder': "Ville ou code postal",'class':'form-control'}}) }}
-            {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
-          {{ form_end(form) }}
+      <a class="navbar-brand" href="#">Beaute</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Mes Reservation <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">hhh</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Connexion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
-      <div class="col-sm-6">
-        
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          {{ form_start(form) }}
+          {{ form_row(form.typeActivite, {'attr': {'placeholder': "Recherche par prestation",'class':'form-control'}}) }}
+          {{ form_row(form.ville, {'attr': {'placeholder': "Ville ou code postal",'class':'form-control'}}) }}
+          {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
+          {{ form_end(form) }}
+        </div>
+        <div class="col-sm-6">
+          
+        </div>
       </div>
     </div>
-  </div>
+  {% else %}
+   {{ render(path('connecter')) }}
+  {% endif %}
 {% endblock %}
