--- a/app/Resources/views/erreur_connexion.html.twig
+++ b/app/Resources/views/erreur_connexion.html.twig
@@ -1,30 +1,70 @@
-{% extends 'base.html.twig' %}
+ {% extends 'base.html.twig' %}
 {% block stylesheets %}
-	<link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
-	<link rel="stylesheet" href={{asset('css/style.css')}}>
+  <link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
+ <link rel="stylesheet" href={{asset('css/style.css')}}>
+  <link rel="stylesheet" href={{asset('css/jquery-ui.css')}}>
+  	<link rel="stylesheet" href={{asset('css/partenaire.css')}}>
+    
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
 {% endblock %}
-{% block body %}
+{% block body %} 
+<div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        
+      </div>
+      <div class="col-sm-4">
+          <div class="alert alert-dismissible alert-danger" id="existe">
+				<strong>Oh mince !</strong> Email ou mot de passe incorrect !
+		  </div>
+      <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'Client')" id="defaultOpen">Client</button>
+        <button class="tablinks" onclick="openCity(event, 'Partenaire')">Partenaire</button>
+      </div>
 
-<i><center><h1 class="text-muted">Email ou mot de passe incorrect</h1></center></i>
-<div class='formulaire'>
-	
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-				
-			</div>
-			<div class="form-group col-sm-4">
-	{{ form_start(form) }}
-		{{ form_row(form.Email, {'attr': {'placeholder': "Votre Email..",'class':'form-control','style':'100px'}}) }}
-		{{ form_row(form.mot_de_passe, {'attr': {'placeholder': "Votre Mot De Passe..",'class':'form-control'}}) }}
-		{{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
-	{{ form_end(form) }}
-	</div>
-	<div class="col-sm-4">
-	</div>
-		
-	</div>
-	
+      <div id="Client" class="tabcontent">
+        <!-- <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>--> 
+                   {{ form_start(form) }}
+                  {{ form_row(form.Email, {'attr': {'placeholder': "Votre Email..",'class':'form-control','style':'100px'}}) }}
+                  {{ form_row(form.mot_de_passe, {'attr': {'placeholder': "Votre Mot De Passe..",'class':'form-control'}}) }}
+                  {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
+                  {{ form_end(form) }} 
+       </div> 
+
+      <div id="Partenaire" class="tabcontent">
+        <!-- <span onclick="this.parentElement.style.display='none'" class="topright">&times</span> -->
+                  {{ form_start(form2) }}
+                  {{ form_row(form2.email, {'attr': {'placeholder': "Votre Email..",'class':'form-control','style':'100px'}}) }}
+                  {{ form_row(form2.password, {'attr': {'placeholder': "Votre Mot De Passe..",'class':'form-control'}}) }}
+                  {{ form_row(form2.save, {'attr': {'class':'btn btn-primary'}}) }}
+                {{ form_end(form2) }}   
+       </div> 
+      </div>
+      <div class="col-sm-4">
+        
+      </div>            
+  </div>
 </div>
 
-{% endblock %}
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
+{% endblock %} 
