--- a/app/Resources/views/profil.html.twig
+++ b/app/Resources/views/profil.html.twig
@@ -1,100 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-
-	<link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
- <link rel="stylesheet" href={{asset('css/style.css')}}>
-  <link rel="stylesheet" href={{asset('css/jquery-ui.css')}}>    
-  <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
-
   <link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
-
+  <link rel="stylesheet" href={{asset('css/partenaire.css')}}>
+  <link rel="stylesheet" href={{asset('css/style.css')}}>
+  <link rel="stylesheet" href={{asset('css/jquery-ui.css')}}>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
 {% endblock %}
 {% block body %}
-  {% if is_granted("ROLE_ADMIN") %}
+  {% if is_granted("ROLE_USER") %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-
-  <a class="navbar-brand" href="#">Beaute</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Mes Reservation <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{path('monprofil')}}">Mon Profil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Connexion</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
-<div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        
-      </div>
-      <div class="col-sm-4">
-      <legend><p class="text-muted" style="text-align: center;">Connexion</p></legend>
-      <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'Client')" id="defaultOpen">Prestation</button>
-        <button class="tablinks" onclick="openCity(event, 'Partenaire')">Etablissement</button>
-      </div>
-
-      <div id="Client" class="tabcontent">
-        
-            {{ form_start(form) }}
-              {{ form_row(form.typeActivite, {'attr': {'placeholder': "Prestation",'class':'form-control','style':'100px'}}) }}
-              {{ form_row(form.codePostale, {'attr': {'placeholder': "Code postal",'class':'form-control'}}) }}
-              {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
-            {{ form_end(form) }} 
-      </div>
-      <div id="Partenaire" class="tabcontent">
-            {{ form_start(form2) }}
-              {{ form_row(form2.nomSociete, {'attr': {'placeholder': "Nom Societe",'class':'form-control','style':'100px'}}) }}
-              {{ form_row(form2.save, {'attr': {'class':'btn btn-primary'}}) }}
-            {{ form_end(form2) }} 
-       </div> 
-      </div>
-      <div class="col-sm-4">
-        
-      </div>            
-  </div>
-</div>
-
-<script>
-function openCity(evt, cityName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-
       <a class="navbar-brand" href="#">Beaute</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -105,7 +23,7 @@ document.getElementById("defaultOpen").click();
             <a class="nav-link" href="#">Mes Reservation <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">hhh</a>
+            <a class="nav-link" href="{{path('monprofil')}}">Mon Profil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Connexion</a>
@@ -122,20 +40,130 @@ document.getElementById("defaultOpen").click();
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          {{ form_start(form) }}
-          {{ form_row(form.typeActivite, {'attr': {'placeholder': "Recherche par prestation",'class':'form-control'}}) }}
-          {{ form_row(form.ville, {'attr': {'placeholder': "Ville ou code postal",'class':'form-control'}}) }}
-          {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
-          {{ form_end(form) }}
+        <div class="col-sm-4">
+          <legend><p class="text-muted" style="text-align: center;">Recherche</p></legend>
+          <div class="tab">
+            <button class="tablinks" onclick="openCity(event, 'Client')" id="defaultOpen">Prestation</button>
+            <button class="tablinks" onclick="openCity(event, 'Partenaire')">Etablissement</button>
+          </div>
+          <div id="Client" class="tabcontent">
+            
+            {{ form_start(form) }}
+            {{ form_row(form.typeActivite, {'attr': {'placeholder': "Prestation",'class':'form-control','style':'100px'}}) }}
+            {{ form_row(form.codePostale, {'attr': {'placeholder': "Code postal",'class':'form-control'}}) }}
+            {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
+            {{ form_end(form) }}
+          </div>
+          <div id="Partenaire" class="tabcontent">
+            {{ form_start(form2) }}
+            {{ form_row(form2.nomSociete, {'attr': {'placeholder': "Nom Societe",'class':'form-control','style':'100px'}}) }}
+            {{ form_row(form2.save, {'attr': {'class':'btn btn-primary'}}) }}
+            {{ form_end(form2) }}
+          </div>
         </div>
-        <div class="col-sm-6">
-          
+        {# #######################Debut resultat d'une recherche################ #}
+        <div class="col-sm-8   register-form" style="margin-top: 10px;">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-sm-6" >
+                <img src="http://placehold.it/700x500" class="img-fluid" alt="Responsive image">
+              </div>
+              {# pour afficher le nom de la boutique ! #}
+              <div class="col-sm-4">
+                <p class="lead">Nom de la société</p>
+                <p class="text-muted"> à 2.4km de chez vous !</p>
+                <p class="text-muted">2 allée des spoutniks, 93700 Drancy</p>
+                <button type="button" class="btn btn-outline-warning">lire la suite ..</button>
+              </div>
+            </div>
+            <div class="row" style="margin-top:20px;">
+              <table class="table table-hover">
+                <tbody>
+                  <tr class="table-active">
+                    <th scope="row">Service 1</th>
+                    <td></td>
+                    <td></td>
+                    <td>20 euro</td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Service 2</th>
+                    <td></td>
+                    <td></td>
+                    <td>à partir de 15 euros</td>
+                    
+                  </tr>
+                   <tr class="table-active">
+                    <th scope="row">Service 3</th>
+                    <td></td>
+                    <td></td>
+                    <td>30 euros</td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
+        {# #######################Fin resultat d'une recherche################ #}
+        
       </div>
     </div>
-  {% else %}
-   {{ render(path('connecter')) }}
-  {% endif %}
-
+    <script>
+    function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+    }
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+    </script>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Mes Reservation <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">hhh</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Connexion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        {{ form_start(form) }}
+        {{ form_row(form.typeActivite, {'attr': {'placeholder': "Recherche par prestation",'class':'form-control'}}) }}
+        {{ form_row(form.save, {'attr': {'class':'btn btn-primary'}}) }}
+        {{ form_end(form) }}
+      </div>
+      <div class="col-sm-6">
+        
+      </div>
+    </div>
+  </div>
+{% else %}
+  {{ render(path('connecter')) }}
+{% endif %}
 {% endblock %}
