--- a/app/Resources/views/home.html.twig
+++ b/app/Resources/views/home.html.twig
@@ -18,7 +18,7 @@
         <a class="nav-link" href="{{ path ('inscrire') }}">Rejoignez-nous</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ path ('connecter') }}">Connexion</a>
+        <a class="nav-link" href="{{ path ('login') }}">Connexion</a>
 
       </li>
       <li class="nav-item">
