--- a/app/Resources/views/profilPartenaire.html.twig
+++ b/app/Resources/views/profilPartenaire.html.twig
@@ -7,28 +7,44 @@
   <link rel="stylesheet" href={{asset('css/bootstrap.min.css')}}>
 {% endblock %}
 {% block body %}
-  {% if is_granted("ROLE_USER") %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Beaute</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Beaute</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="">profil <span class="sr-only">(current)</span></a>
+        </li>
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="">profil <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ path('deconnexion') }}">Déconnecxion</a>
           </li>
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('deconnexion') }}">Déconnecxion</a>
-            </li>
-          </ul>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          {{ form_start(form) }}
+          {{ form_row(form.nomImage) }}
+          <div class="form-group">
+            <label for="selection">Choisir votre établissement </label>
+            <select class="form-control" id="selection" name="select">
+              {% for etablissement in listeEtablissement %}
+              <option>{{ etablissement.nomSociete }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="ok" name="principale">
+              Utiliser cette image comme image principale
+            </label>
+          </div>
+          {{ form_end(form) }}
         </div>
-      </nav>
-      {{ form_start(form) }}
-      {{ form_row(form.nomImage) }}
-      {{ form_end(form) }}
-  {% else %}
-    {{ render(path('connecter')) }}
-  {% endif %}
-{% endblock %}
+      </div>
+    </div>
+  {% endblock %}
