--- a/app/Resources/views/init_password.html.twig
+++ b/app/Resources/views/init_password.html.twig
@@ -13,29 +13,18 @@
 				<li class="nav-item active">
 					<a  class="nav-link" href="{{ path('devenirPartenaire') }}">Devenir partenaire</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/">A propos de nous</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Connexion</a>
-				</li>
-				<li class="nav-item">
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search">
-					<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-				</form>
-			</div>
-		</nav>
-		<div class="register-form container">
+			</ul>
+		</div>
+	</nav>
+		<div class="container">
 			<div class="row">
 				<div class="col-sm-3"></div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 register-form ">
 					{# une div cachée pour afficher l'alerte si le mot de passe est bon #}
 					<div class="alert alert-dismissible alert-success" id="confirmation">
 						<input type="hidden" value="{{inscriptionTerminee}}" id="inscriptionTerminee">
 						<strong>Bravoo !</strong> <p>Vous pouvez maintenant acceder à votre compte en 
-						cliquant <a href="#">ICI</a>
+						cliquant <a href="{{ path('login') }}">ICI</a>
 						</p>
 					</div>
 					<form method="post" action="">
