--- a/app/Resources/views/devenir-partenaire2.html.twig
+++ b/app/Resources/views/devenir-partenaire2.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('css/partenaire-etablissement.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('css/partenaire.css') }}">
 {% endblock %}
 {% block body %}
 	
@@ -12,25 +12,15 @@
 		<div class="collapse navbar-collapse" id="navbarColor01">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a  class="nav-link" href="{{ path('devenirPartenaire') }}">Devenir partenaire</a>
+					<a  class="nav-link" href="">Devenir partenaire</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/">A propos de nous</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Connexion</a>
-				</li>
-				<li class="nav-item">
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search">
-					<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-				</form>
-			</div>
+			</ul>
+		</div>
 		</nav>
-		<div class="register-form container">
+		<div class=" container">
 			<div class="row">
-				<div class="col-sm-6">
+			<div class="col-sm-3"></div>
+				<div class="col-sm-6 register-form">
 					{{ form_start(formEtablissement) }}
 					<legend><p class="text-muted">A propos de votre établissement</p></legend>
 
