--- a/app/Resources/views/partenaire1.html.twig
+++ b/app/Resources/views/partenaire1.html.twig
@@ -12,26 +12,15 @@
 		<div class="collapse navbar-collapse" id="navbarColor01">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a  class="nav-link" href="{{ path('devenirPartenaire') }}">Devenir partenaire</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/">A propos de nous</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Connexion</a>
-				</li>
-				<li class="nav-item">
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search">
-					<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-				</form>
-			</div>
+					<a  class="nav-link" href="">Devenir partenaire</a>
+				</li>	
+			</ul>
+		</div>
 		</nav>
-		<div class="register-form container">
+		<div class="container">
 			<div class="row">
 				<div class="col-sm-3"></div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 register-form ">
 					{{  form_start(partenaire) }}
 					<legend><p class="text-muted" style="text-align: center;">A propos de vous</p></legend>
 					
