--- a/web/css/etablissement.css
+++ b/web/css/etablissement.css
@@ -1,3 +1,9 @@
-#carousel{
-	margin-top: 10px;
+@media screen and (max-width: 360px) {
+  #carrousel img {
+    width: 100%;
+    height: 250px;
+  }
+  #carrousel{
+  	margin-right: 10px;
+  }
 }
